<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Layout2"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_home_24"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:gravity="center"
        android:textSize="40sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/u_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Us_na"
            android:textColorHint="@color/white"
            android:padding="20dp"
            android:background="@drawable/text_bac"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_baseline_perm_identity_24"
            android:drawablePadding="10dp"
            android:inputType="textPersonName"
            />
        <EditText
            android:id="@+id/u_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:padding="20dp"
            android:textColorHint="@color/white"
            android:background="@drawable/text_bac"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            />
        <android.widget.Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_bac"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/sub"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cr_Ac"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/black"
            android:padding="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Need"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/black"
            android:padding="20dp"
            android:layout_alignParentEnd="true"
            />
    </LinearLayout>

</LinearLayout>