<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivtiy"

    >
    <ImageView
        android:id="@+id/home"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_home_24"
        android:layout_marginHorizontal="150dp"
        android:background="@drawable/bag_hm"
        android:layout_marginTop="90dp"/>

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/log"
        android:textSize="50sp"
        android:textColor="@color/purple_700"
        android:layout_marginTop="175dp"
        android:textStyle="bold"

        />
    <EditText
        android:id="@+id/User_txt"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/login_txt"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/Us_na"
        android:textColorHint="@color/purple_700"
        android:background="@drawable/txt_con"
        />
    <EditText
        android:id="@+id/pass_edt"
        android:inputType="textWebPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/User_txt"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/pass"
        android:textColorHint="@color/purple_700"
        android:background="@drawable/txt_con"

        />

    <Button
        android:id="@+id/For_pss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_edt"
        android:layout_marginHorizontal="270dp"
        android:layout_marginTop="5dp"
        android:hint="@string/For"
        android:textColorHint="@color/white"
        android:background="@drawable/bac_fo_pw"
        />

    <android.widget.Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_edt"
        android:text="@string/sub"
        android:padding="20dp"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bac_sub"
        android:textColor="@color/white"/>


</RelativeLayout>