<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/img">

    <ImageView
        android:id="@+id/pre"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_person_24"
        android:background="@drawable/per_bac"
        android:layout_marginTop="90dp"
        android:layout_marginHorizontal="150dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/log"
        android:textColor="#000000"
        android:textSize="55sp"
        android:textStyle="bold" />
    <RelativeLayout
        android:layout_centerVertical="true"
        android:layout_below="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/r2_bac"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        >

        <EditText
            android:id="@+id/u_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Us_na"
            android:textColorHint="@color/white"
            android:padding="20dp"
            android:background="@drawable/text_bac"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_baseline_perm_identity_24"
            android:drawablePadding="10dp"
            android:inputType="textPersonName"
            />
        <EditText
            android:id="@+id/u_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/u_name"
            android:hint="@string/pass"
            android:textColorHint="@color/white"
            android:padding="20dp"
            android:background="@drawable/text_bac"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            />
        <android.widget.Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/u_pass"
            android:background="@drawable/text_bac"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/sub"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cr_Ac"
            android:layout_below="@id/submit"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/white"
            android:padding="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Need"
            android:layout_below="@id/submit"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/white"
            android:padding="20dp"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>
</RelativeLayout>